# TSTorch

./: .gitignore  LICENSE  README.md  jest.config.cjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-visualizer.js  tsconfig.json  verify-demo.js
.github/workflows/: build.yml  publish.yml
extensions/quantization/: fsq.ts  index.ts  vq.ts
npm/darwin-arm64/: package.json
npm/darwin-arm64-webgpu/: package.json
npm/darwin-x64/: package.json
npm/darwin-x64-webgpu/: package.json
npm/linux-arm64-gnu/: package.json
npm/linux-x64-gnu/: package.json
npm/linux-x64-gnu-cuda/: package.json
npm/linux-x64-gnu-webgpu/: package.json
npm/win32-x64-msvc/: package.json
npm/win32-x64-msvc-cuda/: package.json
npm/win32-x64-msvc-webgpu/: package.json
src/: autodiff.test.ts  autodiff.ts  index.web.ts  native-loader.ts  operators.test.ts  operators.ts  scalar.test.ts  scalar.ts  scalar_functions.ts  tensor.ts  testOperators.ts
src/cutile/src/kernels/: conv.rs  cross_entropy.rs  data.rs  embedding.rs  flash_attention.rs  fused_ops.rs  layernorm.rs  mixed_precision.rs  mod.rs  reduce.rs  softmax.rs
src/cutile/src/ops/: attention.rs  conv.rs  fused.rs  mod.rs  norm.rs  pooling.rs
src/cutile/tests/: fused_ops.rs
src/native/: Cargo.toml
src/native/kernels/: flash_attention.cu  kv_quant.cu
src/native/src/: cutile_backend.rs  device.rs  lib.rs
src/native/src/ops/: attention.rs
src/web/: native.ts  ops.ts  optimizer.ts  store.ts  tape.ts
src/web/shaders/: activation.wgsl  adamw.wgsl  conv.wgsl  cross_entropy.wgsl  dropout.wgsl  elementwise.wgsl  embedding.wgsl  grad_util.wgsl  layernorm.wgsl  pooling.wgsl  reduce.wgsl  softmax.wgsl
test/: autograd.test.ts  helpers.ts  loader.js  module.test.ts  native.test.ts  nn.test.ts  ops.test.js  run.ts  tensor.test.ts  toy.test.ts
toy/: gpu_kernels.ts  tensor.ts  tensor_functions.ts
